Revert "remove payout + bump SB3 + java 21 + update damsel (#36)" (#41)
This reverts commit 71be5582cf33e594ada20b04130a4d169a0cb4db.

revert IMP-260

Co-authored-by: ggmaleva <ggmaleva@yandex.ru>