@@ -15,6 +15,7 @@ import org.springframework.core.convert.ConversionService;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -24,30 +25,14 @@ public class ConversionWrapperService {
 
     public List<ModificationModel> convertModifications(List<Modification> changeset) {
         return changeset.stream()
-                .filter(ConversionWrapperService::filterUnusedModification) // TODO
                 .map(change -> conversionService.convert(change, ModificationModel.class))
-                .toList();
-    }
-
-    private static boolean filterUnusedModification(Modification modification) {
-        return !(modification.isSetPartyModification()
-                && modification.getPartyModification().isSetContractorModification()
-                && modification.getPartyModification().getContractorModification().isSetModification()
-                && modification.getPartyModification().getContractorModification().getModification().isSetCreation()
-                && modification.getPartyModification().getContractorModification().getModification().getCreation()
-                .isSetDummyEntity())
-                &&
-                !(modification.isSetPartyModification()
-                        && modification.getPartyModification().isSetShopModification()
-                        && modification.getPartyModification().getShopModification().isSetModification()
-                        && modification.getPartyModification().getShopModification().getModification()
-                        .isSetTurnoverLimitsModification());
+                .collect(Collectors.toList());
     }
 
     public List<Modification> convertModificationModels(List<ModificationModel> modifications) {
         return modifications.stream()
                 .map(modification -> conversionService.convert(modification, Modification.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Claim convertClaim(ClaimModel claimModel) {
